dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__reader__tests__read_to_end_full_buffer_returns_buffer_full.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG Reader dropping stream_id=1 status=Open final_size=Some(5) consumed_len=1 total_received_len=5 is_writing_complete=true is_reading_complete=false
