dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__reader__tests__reset_before_data_in_same_batch_discards_data.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG Stream reset by peer stream_id=1 error_code=7
0:00:00.000000000 DEBUG event=on_reset prev=Open next=Reset location=dc/s2n-quic-dc/src/stream/reader.rs:745:41
0:00:00.000000000 DEBUG Reader dropping stream_id=1 status=Reset final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
